resources/sass/markdown.scss
.markdown {
    a {
        @apply underline;
    }

    h1 {
        @apply text-3xl font-lato font-bold mb-4;
    }

    h2 {
        @apply text-2xl font-lato font-bold mb-4;
    }

    h3 {
        @apply text-lg font-lato font-bold mb-4;
    }

    h4 {
        @apply text-base font-lato mb-4;
    }

    img {
        @apply max-w-full;
    }

    p {
        @apply my-4;
    }

    blockquote {
        @apply border-l-4 border-gray-100 pl-2 ml-4;
    }

    hr {
        @apply my-4;
    }

    code {
        @apply bg-gray-100 rounded p-1;
    }

    pre {
        @apply block border-2 border-gray-800 shadow-solid-gray-800 max-w-full my-4;

        code {
            @apply block max-w-full overflow-x-auto whitespace-pre rounded-none p-6;
        }
    }

    ol {
        @apply list-decimal;

        li {
            @apply ml-8 mb-2;
        }
    }

    ul {
        @apply list-disc;

        li {
            @apply ml-8 mb-2;
        }
    }

    .video {
        position: relative;
        padding-bottom: 56.25%; /* 16:9 */
        height: 0;
    }

    .video iframe {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}

